--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "typesense": "^0.14.0"
+    "typesense": "1.1.2"
   },
   "peerDependencies": {
     "@babel/runtime": "^7.13.17"
